--- a/style.css
+++ b/style.css
@@ -13,13 +13,12 @@ body {
   background-color: rgb(224, 237, 233, 0.6);
   position: absolute;
   width: 100%;
-  /* opacity: 0.6; */
+  opacity: 0.6;
 }
 .container2 {
   display: flex;
   justify-content: space-between;
   background-color: rgb(224, 237, 233, 0.6);
-  opacity: 0.5;
   position: absolute;
   bottom: -350px;
   width: 100%;
@@ -28,7 +27,7 @@ body {
 .container3 {
   display: flex;
   background-color: rgba(134, 134, 134, 0.6);
-  opacity: 0.8;
+  opacity: 1;
   position: absolute;
   margin-left: 300px;
   padding-left: 20px;
@@ -46,13 +45,11 @@ body {
 .button1 {
   margin-left: 220px;
   color: white;
-  background-color: rgb(66, 209, 245);
   padding: 12px;
   border: none;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-
 .button-2 {
   color: white;
   background-color: rgb(66, 209, 245);
@@ -60,10 +57,16 @@ body {
   border: none;
   border-radius: 5px;
   margin: 10px;
+  opacity: 1;
 }
 button:hover {
   background-color: rgb(114, 199, 80);
   color: rgb(22, 27, 27);
+}
+.button-btn {
+  /* background-color: rgb(66, 209, 245); */
+  opacity: 0.9;
+  border-radius: 10px;
 }
 .logo {
   width: 90px;
@@ -90,7 +93,7 @@ a {
   text-transform: uppercase;
 }
 a:hover {
-  background-color: rgb(177, 35, 35);
+  background-color: rgb(92, 194, 209);
   color: rgb(5, 5, 22);
 }
 .separator {
