--- a/style.css
+++ b/style.css
@@ -44,14 +44,15 @@ body {
 }
 .button1 {
   margin-left: 220px;
-  color: white;
+  color: rgb(26, 16, 16);
+  background-color: rgb(66, 209, 245);
   padding: 12px;
   border: none;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 .button-2 {
-  color: white;
+  color: rgb(24, 14, 14);
   background-color: rgb(66, 209, 245);
   padding: 8px;
   border: none;
@@ -65,6 +66,7 @@ button:hover {
 }
 .button-btn {
   /* background-color: rgb(66, 209, 245); */
+  /* color: black; */
   opacity: 0.9;
   border-radius: 10px;
 }
@@ -127,7 +129,7 @@ a:hover {
 }
 .hovers:hover {
   transform: scale(1.1);
-  transition: 2s;
+  transition: 0.8s;
 }
 .test-grid {
   text-align: center;
