--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   justify-content: space-between;
   background-color: rgb(224, 237, 233, 0.6);
   position: absolute;
-  bottom: -350px;
+  bottom: -300px;
   width: 100%;
   padding: 15px 20px;
 }
@@ -126,6 +126,9 @@ a:hover {
   justify-content: center;
   flex-grow: 5;
   margin-top: 100px;
+}
+.flex-grid{
+  gap: 5px;
 }
 .hovers:hover {
   transform: scale(1.1);
